@@ -1,3 +1,5 @@
+20090719
+	correct order of operands to memset(!), eg in ipif [mjl]
 20090718
 	fix appl/cmd/stream.b error exits to include fail: [mjl]
 20090717
